Add: アバターデフォルト画像の変更、レイアウト追加
・アバター画像のデフォルト設定画像を変更
・マイページのプロフィール編集リンクをページのユーザidとカレントユーザが一致した場合のみ
　表示するように記述、一致してない場合にはフォロー中、もしくはフォローする表示とボタンを追加

--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -15,6 +15,7 @@
 	width: 220px;
 	text-align: center;
 	color: gray;
+	margin-top:10px;
 }
 .saerch-flex {
 	display: flex;
@@ -64,8 +65,13 @@ button{
     margin-top: 5px;
 }
 .picture-comment {
-	height: 230px;
+	height: 273px;
 	font-size: 12px;
 	margin-top: 5px;
     border: outset;
+    overflow: scroll;
 }
+.comment-form {
+	text-align: center;
+}
+/*投稿詳細画面ここまで*/
