--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -73,19 +73,21 @@
 .post-container {
 	display: flex;
 	flex-wrap: wrap;
+	margin-top: 10px;
 }
 .post-item {
 	width: 275px;
 	text-align: center;
+	margin-top: 10px;
 }
 /*いいね機能の色変更（非同期）*/
 .icolor1 {
-	color: #9405f9;
+	color: red;
 }
 .icolor0 {
-	color: #ddd;
+	color: gray;
 }
 .fabo-style {
-	margin-top: 5px;
+	margin-top: 2px;
 }
 /*いいね機能の色変更（非同期）*/
