--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -1,12 +1,17 @@
 <div class="picture-item">
-	<span><%=  time_ago_in_words(picture.created_at)%>前 / <%= picture.genre.name %></span>
-		<% if picture.image? %>
-			<%= link_to picture_path(picture.id),data: {"turbolinks" => false} do %>
-  				<% if picture.image.file.content_type.include?('image/') %>
-    				<%= image_tag picture.image.url(:thumb),size: '200x200'%>
-  				<% else %>
-    				<%= video_tag picture.image.url,size: '200x200',controls: true, autobuffer: true %>
-  				<% end %>
-  			<% end %>
+	<div style="margin-bottom: -3px;"><span><%= picture.genre.name %></span></div>
+	<% if picture.image? %>
+    <%= link_to picture_path(picture.id),data: {"turbolinks" => false} do %>
+      <% if picture.image.file.content_type.include?('image/') %>
+    		<%= image_tag picture.image.url(:thumb),size: '200x200'%>
+  		<% else %>
+    		<%= video_tag picture.image.url,size: '200x200',controls: true, autobuffer: true %>
   		<% end %>
+  	<% end %>
+  <% end %>
+  <div class="fabo-style">
+      <div id="favo_buttons_<%= picture.id %>">
+         <%= render partial: 'favorites/post', locals: { picture: picture} %>
+      </div>
+  </div>
 </div>
