--- a/app/views/users/_menu.html.erb
+++ b/app/views/users/_menu.html.erb
@@ -20,8 +20,17 @@
       <span>いいね</span>
       <span class="item-value"><%=link_to "#{@favorite_pictures.count}", favorites_user_path(@user.id) %></span>
     </li>
+
        <li class="menu-item">
-        <%= link_to "プロフィールを編集",edit_user_path, class: "btn btn-default",style:"margin-left:200px; color:#777; border-radius: 30px; position: relative; top:-11px;" %>
+            <% if current_user == @user %>
+               <%= link_to "プロフィールを編集",edit_user_path, class: "btn btn-default",style:"margin-left:200px; color:#777; border-radius: 30px; position: relative; top:-11px;" %>
+             <% else %>
+                <% if @user.followed_by?(current_user) %>
+                   <%=link_to "フォロー中", user_relationships_path(@user.id), method: :delete,"data-confirm" => "本当にフォローを解除しますか？", class: "btn btn-default",style:"margin-left:200px; color:white; border-radius: 30px; position: relative; top:-11px;background-color:#158cf3;border: 1px solid #158cf3;" %>
+                  <% else %>
+                    <%=link_to "フォローする", user_relationships_path(@user.id), method: :post, class: "btn btn-default",style:"margin-left:200px; color:#777; border-radius: 30px; position: relative; top:-11px;border: 1px solid #158cf3;color:#158cf3;"  %>
+                  <% end %>
+            <% end %>
         </li>
   </ul>
 
