Add: ヘッダーレイアウト追加（途中）

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -42,6 +42,6 @@
 	<div class="infinite-scroll-request">
 		<%= image_tag "load.gif",size:'30x30' %>
 	</div>
-	<p class="infinite-scroll-last">これ以上記事がありません</p>
+	<p class="infinite-scroll-last">これ以上投稿がありません</p>
 	<p class="infinite-scroll-error">読み込むページがありません</p>
 </div>
