--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,18 +18,16 @@
 @import "font-awesome";
 
 body {
-	margin-top: 70px;
+	margin-top: 50px;
 	background-color: #fafafa;
 }
-.header {
-	background-color: #bdef9233;
-	box-shadow:0 2px 8px rgba(30,30,80,.3);
-  	line-height:1;
+header {
+	background-color: #0e0e0e;
   	position:fixed;
   	top:0;
   	left:0;
   	width:100%;
-  	height: 70px;
+  	height: 50px;
   	z-index:1070;
 }
 /*Login & Signup Form (Start)*/
@@ -125,3 +123,14 @@ body {
 	display: none;
 }
 /*無限スクロールでページャ表示を消すため*/
+.picture-btn {
+	background-color: #4dc7b7;
+    color: white;
+    margin-left: 15px;
+    margin-top: 4px;
+    border-radius: 30px;
+    height: 30px;
+}
+.home-link {
+	color:white;
+}
