--- a/app/views/pictures/_new.html.erb
+++ b/app/views/pictures/_new.html.erb
@@ -1,5 +1,5 @@
 <!-- モーダル投稿機能-->
-<button type="button" data-toggle="modal" data-focus="true" data-target="#modal-option" class="btn execution-btn" style="width:130px;">新規投稿</button>
+<button type="button" data-toggle="modal" data-focus="true" data-target="#modal-option" class="picture-btn" style="width:80px;">投稿</button>
 <div class="modal fade" id="modal-option" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
