Add: タイムライン（ログインユーザの投稿+フォローしている人の投稿）画面を追加
・タイムライン画面を作成するため、usersコントローラにhomesアクションを追加
・上記ルーティングを設定
・homesアクションにフォローしている人の投稿とカレントユーザの投稿が投稿順に並ぶように記述（concat)
・ヘッダーのレイアウトを追加

--- a/app/views/users/homes.html.erb
+++ b/app/views/users/homes.html.erb
@@ -1,2 +1,18 @@
 
 <h1>aaaaaaaaa</h1>
+<% @pictures.each do |picture| %>
+
+			<%= picture.user.name %>
+			<%= picture.created_at %>
+			<% if picture.image? %>
+			    <%= link_to picture_path(picture.id),data: {"turbolinks" => false} do %>
+			      <% if picture.image.file.content_type.include?('image/') %>
+			    		<%= image_tag picture.image.url(:thumb),size: '200x200'%>
+			  		<% else %>
+			    		<%= video_tag picture.image.url,size: '200x200',controls: true, autobuffer: true %>
+			  		<% end %>
+			  	<% end %>
+			  <% end %>
+<!--
+<%# end %> -->
+<% end %>
