--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -135,6 +135,7 @@ a:hover {
     height: 30px;
 }
 .home-link {
-    font-size: 30px;
+    font-size: 38px;
     font-family: cursive;
+    letter-spacing: 0.05em;
 }
