Add: ユーザーの一覧画面追加
・ユーザーの一覧画面のレイアウトを作成
・ヘッダーに一覧画面へのリンクを追加
・最新の登録者が上に表示されるように変更

--- a/app/views/users/homes.html.erb
+++ b/app/views/users/homes.html.erb
@@ -1,6 +1,7 @@
+<div class="homes-container">
 
-<h1>aaaaaaaaa</h1>
 <% @pictures.each do |picture| %>
+
 
 			<%= picture.user.name %>
 			<%= picture.created_at %>
@@ -13,6 +14,7 @@
 			  		<% end %>
 			  	<% end %>
 			  <% end %>
-<!--
-<%# end %> -->
+
 <% end %>
+
+</div>
