--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,11 +9,15 @@
 .position-change {
 	position: relative;
 	top: -100px;
+	z-index: 8;
 }
 .mypage-menu {
 	height: 50px;
 	background-color: #fff;
 	border: 1px solid #6E6E6E;
+	position: sticky;
+    top: 50px;
+    z-index: 5;
 }
 .menu-itembox {
 	width: 500px;
@@ -91,3 +95,19 @@
 	margin-top: 2px;
 }
 /*いいね機能の色変更（非同期）*/
+/*ユーザ一覧&検索画面*/
+.users-container {
+	margin: 0 auto;
+	width: 800px;
+}
+.users-flex {
+	display: flex;
+	border-bottom: inset;
+    margin-top: 10px;
+}
+/*ユーザ一覧&検索画面ここまで*/
+.homes-container {
+	margin: 0 auto;
+	width: 1000px;
+	padding-top: 25px;
+}
