--- a/app/views/favorites/_post.html.erb
+++ b/app/views/favorites/_post.html.erb
@@ -1,21 +1,17 @@
-
-<% if user_signed_in? %>
-    <% if picture.favorited_by?(current_user) %> <!-- ログインしているユーザーがファボしたかどうかで分岐 -->
-        <span style='color:gray;'><%=  time_ago_in_words(picture.created_at)%>前  </span>
-        <%=link_to picture_favorites_path(picture.id), method: :delete,remote: true do %>
-            <span class="icolor1"><i class="fas fa-heart fa-lg"></i>  <%= picture.favorites.count %></span>
-        <% end %>
-        <span style="color:gray;"><i class="far fa-comments fa-lg"></i>  <%= picture.comments.count %></span>
-    <% else %>
-        <span style='color:gray;'><%=  time_ago_in_words(picture.created_at)%>前  </span>
-        <%=link_to picture_favorites_path(picture.id), method: :post,remote: true do %>
-            <span class="icolor0"><i class="far fa-heart fa-lg"></i>  <%= picture.favorites.count %></span>
-        <% end %>
-        <span style="color:gray;"><i class="far fa-comments fa-lg"></i>  <%= picture.comments.count %></span>
+<% if picture.favorited_by?(current_user) %> <!-- カレントユーザーがファボしたかどうかで分岐 -->
+    <span style='color:gray;'><%=  time_ago_in_words(picture.created_at)%>前  </span>
+    <%=link_to "/pictures/#{picture.id}/favorites", method: :delete,remote: true do %>
+        <span class="icolor1"><i class="fas fa-heart fa-lg"></i>  <%= picture.favorites.count %></span>
     <% end %>
+    <span style="color:gray;"><i class="far fa-comments fa-lg"></i>  <%= picture.comments.count %></span>
 <% else %>
-    <p><span>お気に入り数: </span><%= picture.favorites.count %></p>
+    <span style='color:gray;'><%=  time_ago_in_words(picture.created_at)%>前  </span>
+    <%=link_to "/pictures/#{picture.id}/favorites", method: :post,remote: true do %>
+        <span class="icolor0"><i class="far fa-heart fa-lg"></i>  <%= picture.favorites.count %></span>
+    <% end %>
+    <span style="color:gray;"><i class="far fa-comments fa-lg"></i>  <%= picture.comments.count %></span>
 <% end %>
+
 
 
 
