--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,10 @@
 				</div>
 			</li>
 			<div style="float:left;margin-top: 4px;margin-left:30px;">
-				<%= link_to pictures_path do %><i class="far fa-images fa-3x" style="color:#b0f90b;"></i><% end %>
+				<%= link_to pictures_path,data: {"turbolinks" => false} do %><i class="far fa-images fa-3x" style="color:#b0f90b;"></i><% end %>
+			</div>
+			<div style="float:left;margin-top: 4px;margin-left:30px;">
+				<%= link_to users_path do %><i class="fas fa-users fa-3x" style="color:white;"></i><% end %>
 			</div>
 			<div style="float:left;margin-left: 250px;">
 				<span class="home-link">
@@ -24,7 +27,7 @@
 		<ul class="nav navbar-nav navbar-right" style="margin-right: 150px;">
 			<li style="margin-right: 15px;">
 				<%= search_form_for @find, url: users_path do |f| %>
-					<%= f.text_field :name_cont ,placeholder: 'ユーザ検索',style:'border-radius:30px; padding-left:15px;margin-top:13px;' %>
+					<%= f.text_field :name_cont ,placeholder: 'ユーザー検索',style:'border-radius:30px; padding-left:15px;margin-top:13px;' %>
 					<%= button_tag type: :submit do %>
  						<i class="fas fa-search" style="color:white;"></i>
  					<% end %>
