--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -1,7 +1,7 @@
 <div class="picture-item">
 	<div style="margin-bottom: -3px;"><span><%= picture.genre.name %></span></div>
 	<% if picture.image? %>
-    <%= link_to picture_path(picture.id),data: {"turbolinks" => false} do %>
+    <%= link_to "/pictures/#{picture.id}",data: {"turbolinks" => false} do %>
       <% if picture.image.file.content_type.include?('image/') %>
     		<%= image_tag picture.image.url(:thumb),size: '200x200'%>
   		<% else %>
@@ -11,7 +11,22 @@
   <% end %>
   <div class="fabo-style">
       <div id="favo_buttons_<%= picture.id %>">
-         <%= render partial: 'favorites/post', locals: { picture: picture} %>
-      </div>
+          <!--  <%#= render partial: 'favorites/post', locals: { picture: picture} %> -->
+          <!-- 部分テンプレートで表示するとview表示が約8秒程度遅延していたので直接記入 -->
+        <% if picture.favorited_by?(current_user) %>
+          <span style='color:gray;'><%=  time_ago_in_words(picture.created_at)%>前  </span>
+            <%=link_to "/pictures/#{picture.id}/favorites", method: :delete,remote: true do %>
+              <span class="icolor1"><i class="fas fa-heart fa-lg"></i>  <%= picture.favorites.count %></span>
+          <% end %>
+          <span style="color:gray;"><i class="far fa-comments fa-lg"></i>  <%= picture.comments.count %></span>
+        <% else %>
+          <span style='color:gray;'><%=  time_ago_in_words(picture.created_at)%>前  </span>
+            <%=link_to "/pictures/#{picture.id}/favorites", method: :post,remote: true do %>
+              <span class="icolor0"><i class="far fa-heart fa-lg"></i>  <%= picture.favorites.count %></span>
+            <% end %>
+          <span style="color:gray;"><i class="far fa-comments fa-lg"></i>  <%= picture.comments.count %></span>
+        <% end %>
+        <!-- ここまで -->
+    </div>
   </div>
 </div>
