--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,22 @@
                         <!-- JSファイルを呼び出し -->
                         <div class="fabo-style">
                             <div id="favo_buttons_<%= picture.id %>">
-                              <%= render partial: 'favorites/post', locals: { picture: picture} %>
+                                <!--  <%#= render partial: 'favorites/post', locals: { picture: picture} %> -->
+                                <!-- 部分テンプレートで表示するとview表示が遅延していたので直接記入 -->
+                                <% if picture.favorited_by?(current_user) %>
+                                  <span style='color:gray;'><%=  time_ago_in_words(picture.created_at)%>前  </span>
+                                    <%=link_to "/pictures/#{picture.id}/favorites", method: :delete,remote: true do %>
+                                      <span class="icolor1"><i class="fas fa-heart fa-lg"></i>  <%= picture.favorites.count %></span>
+                                  <% end %>
+                                  <span style="color:gray;"><i class="far fa-comments fa-lg"></i>  <%= picture.comments.count %></span>
+                                <% else %>
+                                  <span style='color:gray;'><%=  time_ago_in_words(picture.created_at)%>前  </span>
+                                    <%=link_to "/pictures/#{picture.id}/favorites", method: :post,remote: true do %>
+                                      <span class="icolor0"><i class="far fa-heart fa-lg"></i>  <%= picture.favorites.count %></span>
+                                    <% end %>
+                                  <span style="color:gray;"><i class="far fa-comments fa-lg"></i>  <%= picture.comments.count %></span>
+                                <% end %>
+                                <!-- ここまで -->
                             </div>
                         </div>
                     </div>
