Add/Fix ログイン前ヘッダー画面追加/投稿画面修正/バリデーション追加
・ログイン前のヘッダーにhomeリンクとaboutリンクを追加
・ログイン後の歯車アイコン内にhomuリンクとaboutリンクを追加
・投稿画面でtitle入力欄を削除（不要と判断）、レイアウトと記述を修正
・新規登録画面のバリデーションを設定、nameの空登録をブロック
・デバイスのエラーメッセージを日本語化するためのファイルを追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,13 +33,20 @@ header {
 a:hover {
 	text-decoration: none;
 }
+.navbar-nav > li > a:hover {
+	background-color: transparent;
+}
+.footer-logo {
+	margin-top: 30px;
+	text-align: right;
+	padding-right: 300px;
+	font-family: -webkit-pictograph;
+}
 /*Login & Signup Form (Start)*/
 .main-container {
 	margin: 0 auto;
 }
-.color-container {
-	background-color: #fcf8e3;
-}
+
 .login-title {
 	text-align: center;
 	padding: 25px 0 15px;
