--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,6 @@
     <%= render 'layouts/header' %>
     <p id="notice"><%= notice %></p>
     <%= yield %>
+    <p class="footer-logo">© 2019 PHOTOPE</p>
   </body>
 </html>
