--- a/app/views/users/homes.html.erb
+++ b/app/views/users/homes.html.erb
@@ -21,7 +21,7 @@
 			<% if picture.image? %>
 			    <%= link_to picture_path(picture.id),data: {"turbolinks" => false} do %>
 			      	<% if picture.image.file.content_type.include?('image/') %>
-			    		<%= image_tag picture.image.url(:thumb),size: '400x400',style:'border: ridge; border-color: #cba3d8;' %>
+			    		<%= image_tag picture.image.url(:thumb),size: '400x400',style:'border: ridge; border-color: #c3d5f1;' %>
 			  		<% else %>
 			    		<%= video_tag picture.image.url,size: '400x400',controls: true, autobuffer: true,style:'border: ridge;' %>
 			  		<% end %>
