--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,43 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/*トップページ */
+.header-bg {
+  background-image : url("top.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+.header-style {
+	width: 40%;
+	height: 100px;
+	margin-left: auto;
+	margin-right: 10%;
+    position: relative;
+    top: 15%;
+    color:white;
+}
+.heading-title {
+	font-size: 40px;
+    color: white;
+    font-family: serif;
+    letter-spacing: 0.5em;
+}
+.main-itle {
+	font-size: 70px;
+    color: white;
+    font-family: fantasy;
+    letter-spacing: 0.3em;
+    margin-top: 20px;
+    padding-left: 70px;
+}
+.scroll-container {
+  scroll-behavior: smooth;
+}
+.top-container {
+	margin: 0 auto;
+	margin-top: 100px;
+	width: 600px;
+}
