--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,8 +1,22 @@
-<h1>トップページ</h1>
-<p>Find me in app/views/home/top.html.erb</p>
-<br><br><br>
-
-<br><br><br><br>
-<p>11</p><p>11</p><p>11</p><p>11</p>
-<p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p><p>11</p>
+<div class="header-bg">
+	<div class="header-style">
+		<p class="heading-title">動物好きのSNS</p>
+		<p class="main-itle">PhotoPe</p>
+		<p><a href="#section1" style="color:white;">初めての方はこちら</a>　/　<%= link_to ' ログインの方はこちら', new_user_session_path,style:'color:white;'%>　/　<%= link_to '新規登録の方はこちら', new_user_registration_path,style:'color:white;'%></p>
+	</div>
 </div>
+
+<div class="scroll-container">
+	<div class="top-container">
+<p>aa</p>
+<br><br><br><br>v<br><p>aa</p><br><br><br><br><br><br><br><br><br>
+
+<section id="section1">1</section>
+<p>aa</p>
+<p>aa</p>
+<p>aa</p>
+<p>aa</p>
+<p>aa</p>
+	</div>
+</div>
+
