--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <header id="header" class="nav navbar-nav">
 	<% if user_signed_in? %>
+		<!-- ログイン中のヘッダー -->
 		<ul class="nav navbar-nav navbar-left" style="margin-left: 150px;">
 			<li style="margin-left: 50px;margin-top: 13px;">
 				<div class="dropdown">
@@ -8,6 +9,8 @@
     				<span class="caret"></span>
   					</button>
   					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+  						<li><%= link_to ' Home', root_path, class: 'glyphicon glyphicon-home home' %></li>
+						<li><%= link_to ' About', home_about_path, class: 'glyphicon glyphicon-link about' %></li>
   						<li><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %></li>
   					</ul>
 				</div>
@@ -42,9 +45,13 @@
 				<%= render 'pictures/new' %>
 			</div>
 		</ul>
-
-		<% else %>
-      		<%= link_to ' 新規登録', new_user_registration_path, class: 'glyphicon glyphicon-edit' %>
-        	<%= link_to ' ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in' %>
-        <% end %>
+	<% else %>
+		<!-- ログイン前のヘッダー -->
+		<ul class="nav navbar-nav navbar-left" style="margin-left: 10%;">
+			<li><%= link_to ' Home', root_path, class: 'glyphicon glyphicon-home home',style: "color:white;" %></li>
+			<li><%= link_to ' About', home_about_path, class: 'glyphicon glyphicon-link about',style: "color:white;" %></li>
+      		<li><%= link_to ' 新規登録', new_user_registration_path, class: 'glyphicon glyphicon-edit',style: "color:white;" %></li>
+        	<li><%= link_to ' ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in',style: "color:white;" %></li>
+        </ul>
+    <% end %>
 </header>
