Add+Fix: 新規登録のバリデーションを追加
・deviseで用意されているバリデーションに加え、nameカラムに2文字以上、20文字以下のバリデーションを追加
・エラーメッセージの表示位置や色を修正
・エラーメッセージの日本化欄にパスワード確認時のエラー文言を追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <p id="notice"><%= notice %></p>
+    <div id="notice" style="text-align: center; background-color: #0e0e0e;color:white;"><%= notice %></div>
     <%= yield %>
     <p class="footer-logo">© 2019 PHOTOPE</p>
   </body>
