--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
 <div class="main-container">
-<h2 class="signup-title">新規会員登録の方はこちら</h2>
+<h2 class="signup-title">新規会員登録</h2>
   <div class="signup-box">
     <%= image_tag "usaginko.png", :size => '230x200',style: "border-radius: 25%;" %>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %><br>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %><br>
+      <%= render "devise/shared/error_messages", resource: resource %>
         <%= f.text_field :name, autofocus: true, placeholder: "ユーザネーム(変更可）",class: "input-item",style: "padding-left: 10px;" %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email",placeholder: "登録アドレス",class: "input-item",style: "padding-left: 10px;" %>
         <% if @minimum_password_length %>
