Add+Update: Ja.ymlファイル更新、投稿機能のバリデーション追加
・バリデーションによるエラーの日本語表記追加のため、Ja.ymlファイルを更新
・投稿機能にバリデーションを設定、遷移先をエラー表記を追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <div id="notice" style="text-align: center; background-color: #0e0e0e;color:white;"><%= notice %></div>
+   <!--  <span id="notice" style="text-align: center; color:white;margin-top: 20px;"><%= notice %></span> -->
     <%= yield %>
     <p class="footer-logo">© 2019 PHOTOPE</p>
   </body>
