--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,7 +1,6 @@
 <% if obj.errors.any? %>
-    <div id="error_explanation">
-      <h3><%= pluralize(obj.errors.count, "error") %> prohibited this obj from being saved:</h3>
-
+    <div id="error_explanation"style="color:red;">
+      <h3><%= pluralize(obj.errors.count, "") %>件のエラーが発生</h3>
       <ul>
       <% obj.errors.full_messages.each do |message| %>
         <li><%= message %></li>
