--- a/app/views/pictures/_new.html.erb
+++ b/app/views/pictures/_new.html.erb
@@ -4,23 +4,23 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">投稿フォーム</h5>
+        <h5 class="modal-title">投稿フォーム</h5><span style="color:red;font-size: 12px;">画像or動画が未入力の場合は投稿できません</span>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       </div>
       <div class="modal-body">
         <div class="px-4 py-3">
           <%= form_for(Picture.new) do |f| %>
             <div class="form-group">
-              <%= f.label :種類 %>
+              <%= f.label :ジャンル %>
               <br>
               <%= f.collection_select(:genre_id, Genre.all, :id, :name) %>
             </div>
             <div class="form-group">
-              <%= f.label :画像or動画 %><span style="color:gray;font-size:12px;"> （許可している拡張子: jpg jpeg gif png / mp4 mov）</span><span style="color:red;font-size: 12px;">注意: 動物関連の投稿のみ</span>
+              <%= f.label :画像or動画 %><span style="color:gray;font-size:12px;"> （許可している拡張子: jpg jpeg gif png / mp4 mov）</span><span style="color:blue;font-size: 12px;">注意: 当サイトは動物の投稿のみ許可</span>
               <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png,video/*',class: "form-control",placeholder: "必須" %>
             </div>
             <div class="form-group">
-              <%= f.label :本文 %>
+              <%= f.label :本文 %><span style="color:gray;font-size:12px;">　（任意:300文字以内）</span>
               <%= f.text_area :description,class: "form-control" %>
             </div>
               <%= f.submit "投稿する", class: "btn btn-info form-control" %>
