--- a/app/views/users/homes.html.erb
+++ b/app/views/users/homes.html.erb
@@ -1,4 +1,6 @@
+
 <div class="homes-container">
+	<p id="notice" style="margin: 0 auto;padding-bottom: 15px;color:red;"><%= notice %></p>
 	<div class="homes-heading">
 		<%= link_to user_path(current_user) do %>
 			<%= image_tag current_user.avatar_image.url,class: "avatar-image",size:'150x150' %>
