--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,3 +1,7 @@
+
+<textarea cols="24" rows="3" onkeyup="ShowLength(value);"></textarea>
+<p id="inputlength">0文字</p>
+
 <h1>Pictures#new</h1>
 <p>Find me in app/views/pictures/new.html.erb</p>
 <%= form_for(@picture) do |f| %>
