Fix: レイアウト修正

--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -28,22 +28,23 @@
     			</div>
 			</div>
 			<div class="fabo-style">
-      			<div id="favo_buttons_<%= @picture.id %>">
+        <span style='color:gray;'><%= @picture.created_at.strftime("%Y-%m-%d %H:%M") %> / </span>
+      			<div id="favo_buttons_<%= @picture.id %>" style="display: inline-block;">
           		<!-- 	<%#= render partial: 'favorites/post', locals: { picture: @picture} %> -->
           			<% if @picture.favorited_by?(current_user) %>
-    <span style='color:gray;'><%= @picture.created_at.strftime("%Y-%m-%d %H:%M") %> (<%=  time_ago_in_words(@picture.created_at)%>前)  </span>
     <%=link_to "/pictures/#{@picture.id}/favorites", method: :delete,remote: true do %>
+    <span style='color:gray;'><%=  time_ago_in_words(@picture.created_at)%>前  </span>
         <span class="icolor1"><i class="fas fa-heart fa-lg"></i>  <%= @picture.favorites.count %></span>
     <% end %>
     <span style="color:gray;"><i class="far fa-comments fa-lg"></i>  <%= @picture.comments.count %></span>
 <% else %>
-    <span style='color:gray;'><%= @picture.created_at.strftime("%Y-%m-%d %H:%M") %> (<%=  time_ago_in_words(@picture.created_at)%>前)  </span>
+<span style='color:gray;'><%=  time_ago_in_words(@picture.created_at)%>前 </span>
     <%=link_to "/pictures/#{@picture.id}/favorites", method: :post,remote: true do %>
         <span class="icolor0"><i class="far fa-heart fa-lg"></i>  <%= @picture.favorites.count %></span>
     <% end %>
     <span style="color:gray;"><i class="far fa-comments fa-lg"></i>  <%= @picture.comments.count %></span>
 <% end %>
-
+</div>
 		    	<% if current_user == @picture.user %>
       			<span class="dropdown">
 					<button class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -56,9 +57,9 @@
       			<% end %>
 
 
-
-      			</div>
+                <div>
       			<%= render 'pictures/favorite' %>
+            </div>
   			</div>
 		</div>
 	</div>
