--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,10 +48,10 @@
 	<% else %>
 		<!-- ログイン前のヘッダー -->
 		<ul class="nav navbar-nav navbar-left" style="margin-left: 10%;">
-			<li><%= link_to ' Home', root_path, class: 'glyphicon glyphicon-home home',style: "color:white;" %></li>
-			<li><%= link_to ' About', home_about_path, class: 'glyphicon glyphicon-link about',style: "color:white;" %></li>
-      		<li><%= link_to ' 新規登録', new_user_registration_path, class: 'glyphicon glyphicon-edit',style: "color:white;" %></li>
-        	<li><%= link_to ' ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in',style: "color:white;" %></li>
+			<li class="under"><%= link_to ' Home', root_path, class: 'glyphicon glyphicon-home',style: "color:white;" %></li>
+			<li  class="under"><%= link_to ' About', home_about_path, class: 'glyphicon glyphicon-link about',style: "color:white;" %></li>
+      		<li  class="under"><%= link_to ' 新規登録', new_user_registration_path, class: 'glyphicon glyphicon-edit',style: "color:white;" %></li>
+        	<li  class="under"><%= link_to ' ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in',style: "color:white;" %></li>
         </ul>
     <% end %>
 </header>
