--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,9 @@
     <div class="row">
         <div class="col-xs-3">
             <%= render 'users/profile' %>
+            <% if current_user.try(:admin?) %>
+            <%= link_to "管理画面", "/admin" %>
+            <% end %>
         </div>
         <div class="col-xs-9">
             <div class="post-container">
