--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,37 @@
-<h1>about画面ー</h1>
+<div class="about-bg">
+	<div class="row">
+		<div class="about-container">
+			<ul class="nav nav-tabs"> <!--タブの部分  -->
+    			<li class="nav-item"><a href="#tab1" class="nav-link active" data-toggle="tab">サイト / 制作理由</a></li>
+    			<li class="nav-item"><a href="#tab2" class="nav-link" data-toggle="tab">制作期間 / スキル</a></li>
+    			<li class="nav-item"><a href="#tab3" class="nav-link" data-toggle="tab">導入機能</a></li>
+    			<li class="nav-item"><a href="#tab4" class="nav-link" data-toggle="tab">タブ4</a></li>
+  			</ul>
+  			<div class="tab-content"><!--タブのコンテンツ部分-->
+    			<div id="tab1" class="tab-pane active">
+				    <p class="about-title">PhotoPeはどんなサイト？</p>
+				    <p class="about-heading">動物専用!! 画像/動画投稿に特化したSNSサイト</p>
+				    <p class="about-title">このサイトを制作しようと思った理由は？</p>
+				    <p class="about-heading">➀ SNS制作は学習効率が良さそうだった為</p>
+				    <p class="about-text">2ヶ月間のプログラミング学習で学んだスキルを存分に生かせ、</p>
+				    <p class="about-text">新しい知識も多く学べるサイトを作りたいと思い...</p>
+				    <p class="about-text">その両方を満たせそうかなと考えて、SNS制作に決めました。</p>
+				    <p class="about-heading">➁ 動物好きのSNSがあったら良いなという想い...</p>
+				    <p class="about-text">SNS制作に決めた後テーマを動物特化型にしたのは、動物好きが</p>
+				    <p class="about-text">集まり、投稿し合い、繋がるコミュニティがあったら、</p>
+				    <p class="about-text">楽しそうだなという思いと、同じように感じている人もいるかも</p>
+				    <p class="about-text">知れないという想いから、このテーマにしました。</p>
+    			</div>
+    			<div id="tab2" class="tab-pane">
+      				<p>いいいい</p>
+    			</div>
+    			<div id="tab3" class="tab-pane">
+      				<p>うううう</p>
+   	 			</div>
+    			<div id="tab4" class="tab-pane">
+      				<p>ええええ</p>
+    			</div>
+  			</div>
+		</div>
+	</div>
+</div>
