--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,8 +9,8 @@
     				<span class="caret"></span>
   					</button>
   					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-  						<li><%= link_to ' Home', root_path, class: 'glyphicon glyphicon-home home' %></li>
-						<li><%= link_to ' About', home_about_path, class: 'glyphicon glyphicon-link about' %></li>
+  						<li><%= link_to ' PhotoPeとは?', root_path, class: 'glyphicon glyphicon-home home' %></li>
+						<li><%= link_to ' 制作背景', home_about_path, class: 'glyphicon glyphicon-link about' %></li>
   						<li><%= link_to ' ログアウト', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %></li>
   					</ul>
 				</div>
@@ -48,10 +48,10 @@
 	<% else %>
 		<!-- ログイン前のヘッダー -->
 		<ul class="nav navbar-nav navbar-left" style="margin-left: 10%;">
-			<li class="under"><%= link_to ' Home', root_path, class: 'glyphicon glyphicon-home',style: "color:white;" %></li>
-			<li  class="under"><%= link_to ' About', home_about_path, class: 'glyphicon glyphicon-link about',style: "color:white;" %></li>
+			<li class="under"><%= link_to ' PhotoPeとは?', root_path, class: 'glyphicon glyphicon-home',style: "color:white;" %></li>
+			<li  class="under"><%= link_to ' 制作背景', home_about_path, class: 'glyphicon glyphicon-link about',style: "color:white;" %></li>
+			<li  class="under"><%= link_to ' ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in',style: "color:white;" %></li>
       		<li  class="under"><%= link_to ' 新規登録', new_user_registration_path, class: 'glyphicon glyphicon-edit',style: "color:white;" %></li>
-        	<li  class="under"><%= link_to ' ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in',style: "color:white;" %></li>
         </ul>
     <% end %>
 </header>
