--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -38,13 +38,14 @@
 }
 .top-container {
   text-align: center;
-  padding-top: 70px;
-  padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .image-container {
   margin: 0 10%;
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 100px;
 }
 .item1 {
   width: 59%;
@@ -52,7 +53,17 @@
 .item2 {
   width: 39%;
   text-align: center;
-  vertical-align: middle;
+}
+.home-text {
+  opacity: 0.8;
+  padding-top: 10px;
+  font-family: serif;
+  letter-spacing: 0.4em;
+}
+.sample-container {
+  padding-top: 100px;
+  margin-bottom: 150px;
+  text-align: center;
 }
 /*トップページ */
 /*aboutページ */
