--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -13,26 +13,29 @@
 	margin-top: 15px;
 }
 .picture-item {
-	width: 220px;
+	width: 225px;
 	text-align: center;
 	color: gray;
 	margin-top:10px;
 }
 .saerch-flex {
+	width: 100%;
 	display: flex;
-	padding-top: 40px;
+	padding-top: 30px;
 	padding-bottom: 20px;
+	overflow-x: scroll;
+	-webkit-overflow-scrolling: touch;
 }
 .saerch-item {
-	width: 220px;
-	text-align: center;
+	width: 25%;
+	display: inline-block;
 }
 .sub-search {
 	text-align: center;
     border-bottom: ridge;
+    padding-top: 10px;
     padding-bottom: 20px;
     border-color: #ff0018;
-    margin-right: 20px;
 }
 /*button_tagのデフォルトcssをリセット*/
 button{
