Fix: デプロイ環境でimageが反映されるように記述修正

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,7 +4,7 @@
 
 /*トップページ */
 .header-bg {
-  background-image : url("top.jpg");
+  background-image : image-url("top.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
