Fix: 半角英数字が連続した場合に折り返さない現状を修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,8 @@
 body {
 	margin-top: 50px;
 	background-color: #fafafa;
+	word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 header {
 	background-color: #0e0e0e;
