--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -4,26 +4,33 @@
 			<ul class="nav nav-tabs"> <!--タブの部分  -->
     			<li class="nav-item"><a href="#tab1" class="nav-link active" data-toggle="tab">サイト / 制作理由</a></li>
     			<li class="nav-item"><a href="#tab2" class="nav-link" data-toggle="tab">制作期間 / スキル</a></li>
-    			<li class="nav-item"><a href="#tab3" class="nav-link" data-toggle="tab">導入機能</a></li>
-    			<li class="nav-item"><a href="#tab4" class="nav-link" data-toggle="tab">タブ4</a></li>
+    			<li class="nav-item"><a href="#tab3" class="nav-link" data-toggle="tab">基本機能</a></li>
+    			<li class="nav-item"><a href="#tab4" class="nav-link" data-toggle="tab">+機能/工夫</a></li>
   			</ul>
   			<div class="tab-content"><!--タブのコンテンツ部分-->
     			<div id="tab1" class="tab-pane active">
 				    <p class="about-title">PhotoPeはどんなサイト？</p>
-				    <p class="about-heading">動物専用!! 画像/動画投稿に特化したSNSサイト</p>
+				    <p class="about-heading">動物専用画像&動画特化型SNSサイト</p>
 				    <p class="about-title">このサイトを制作しようと思った理由は？</p>
 				    <p class="about-heading">➀ SNS制作は学習効率が良さそうだった為</p>
 				    <p class="about-text">2ヶ月間のプログラミング学習で学んだスキルを存分に生かせ、</p>
 				    <p class="about-text">新しい知識も多く学べるサイトを作りたいと思い...</p>
-				    <p class="about-text">その両方を満たせそうかなと考えて、SNS制作に決めました。</p>
+				    <p class="about-text">その両方を満たせそうかなと考えて､SNS制作に決めました｡</p>
 				    <p class="about-heading">➁ 動物好きのSNSがあったら良いなという想い...</p>
-				    <p class="about-text">SNS制作に決めた後テーマを動物特化型にしたのは、動物好きが</p>
-				    <p class="about-text">集まり、投稿し合い、繋がるコミュニティがあったら、</p>
-				    <p class="about-text">楽しそうだなという思いと、同じように感じている人もいるかも</p>
-				    <p class="about-text">知れないという想いから、このテーマにしました。</p>
+				    <p class="about-text">SNS制作に決めた後テーマを動物特化型にしたのは､動物好きが</p>
+				    <p class="about-text">集まり､投稿し合い､繋がるコミュニティがあったら､</p>
+				    <p class="about-text">楽しそうだなという思いと､同じように感じている人もいるかも</p>
+				    <p class="about-text">知れないという想いから､このテーマにしました｡</p>
     			</div>
     			<div id="tab2" class="tab-pane">
-      				<p>いいいい</p>
+      				<p class="about-title"">製作期間はどのくらい？</p>
+              <p class="about-heading">2019年3月1日〜3月31日　丸1ヶ月間</p>
+              <p class="about-title">そのときの学習状況はどのくらい？</p>
+              <p class="about-heading">本格的に学習開始してから3ヶ月目</p>
+              <p class="about-text" style="padding-top: 10px;">2018年12月 Progateでプログラミングを学ぶ｡<br>HTML＆CSS / Ruby / Rails少し</p>
+              <p class="about-text" style="padding-top: 10px;">2019年1月〜 プログラミングスクールに通い本格的に学習開始｡</p>
+              <p class="about-text" style="padding-top: 10px;">1月: 課題付きカリキュラムでHTML＆CSS / Ruby / Railsを主に学ぶ。<br>又、 JS / jQuery / Git / AWS等にも触れる｡</p>
+              <p class="about-text" style="padding-top: 10px;">2月: 4人1組でECサイトのチーム開発をする｡機能設計 / 画面設計 /<br> DB設計 / AP設計 / 開発実装等を学ぶ｡</p>
     			</div>
     			<div id="tab3" class="tab-pane">
       				<p>うううう</p>
