--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -87,16 +87,19 @@
 .about-title {
   font-size: 24px;
   color:blue;
-  margin-top: 30px;
+  margin: 25px 0;
 }
 .about-heading {
   font-size: 20px;
-  font-family:  -webkit-pictograph;
   margin-top: 20px;
   padding-bottom: 5px;
 }
 .about-text {
-  font-size: 16px;
+  font-size: 14px;
   color: gray;
+}
+.tab-content {
+  font-family: serif;
+  letter-spacing: 0.1em;
 }
 /*aboutページ */
