--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -40,6 +40,6 @@
 	</p>
 	<br>
 	<p style="font-family: serif;letter-spacing: 0.3em;">登録前にサイトを覗いていきたい方はこちらをご利用ください<br>
-	<%= link_to 'サンプルへ', new_user_registration_path%></p>
+	<%= link_to 'サンプルへ', home_sample_path %></p>
 </div>
 
