--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -50,6 +50,7 @@
 		<ul class="nav navbar-nav navbar-left" style="margin-left: 10%;">
 			<li class="under"><%= link_to ' PhotoPeとは?', root_path, class: 'glyphicon glyphicon-home',style: "color:white;" %></li>
 			<li  class="under"><%= link_to ' 制作背景', home_about_path, class: 'glyphicon glyphicon-link about',style: "color:white;" %></li>
+			<li  class="under"><%= link_to ' サンプル', home_sample_path, class: 'glyphicon glyphicon-gift',style: "color:white;" %></li>
 			<li  class="under"><%= link_to ' ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in',style: "color:white;" %></li>
       		<li  class="under"><%= link_to ' 新規登録', new_user_registration_path, class: 'glyphicon glyphicon-edit',style: "color:white;" %></li>
         </ul>
