Add: ログイン前にsampleページを追加

--- a/app/views/home/sample.html.erb
+++ b/app/views/home/sample.html.erb
@@ -1,1 +1,12 @@
-<p>さんプール</p>
+<div class="row">
+	<div class="container" style="margin-top:70px; text-align: center;">
+		<div style="font-size:20px;font-family:serif;">
+			<p>登録前にサイトを見てみたい方ようにサンプルをご用意</p>
+			<p>ログインにこちらをご利用ください</p>
+		</div>
+		<div style="font-size: 20px;font-family: -webkit-pictograph;opacity: 0.8;margin-top: 40px;margin-bottom: 30px;">
+			<p>サンプルEmail：sample@example.com</p>
+			<p>サンプルPassword：password</p>
+		</div>
+	</div>
+</div>
